finishing basic html/css button styles

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <header class="quiz-intro">
                 <h1>Quiz Time!</h1>
                 <p>Lets Go!</p>
+                <button>Start Quiz</button>
             </header>
             <!--main content-->
 
