time to attempt js

--- a/index.html
+++ b/index.html
@@ -23,11 +23,50 @@
             <header class="quiz-intro">
                 <h1>Quiz Time!</h1>
                 <p>Lets Go!</p>
-                <button>Start Quiz</button>
+                <button>Start Quiz? Yeah sure!</button>
             </header>
             <!--main content-->
-
+            <!--inisible-->
             <main>
+                <!--all questions will generate here-->
+                <section class="questions">
+                    <h2>Questions</h2>
+                    <ul>
+                        <li><button>Answer 1</button></li>
+                        <li><button>Answer 2</button></li>
+                        <li><button>Answer 3</button></li>
+                        <li><button>Answer 4</button></li>
+                    </ul>
+                </section>
+                <!--end questions-->
+                <section class="quiz-done-screen">
+                    <h2>Quiz Finish</h2>
+                    <p>Your Score!: 00</p>
+                    <div>
+                        <label for="">Enter Initials</label>
+                        <input type="text">
+                        <button>Submit</button>
+                    </div>
+                </section>
+
+
+                <!--High score screen-->
+                <section class="highscores-screen">
+                    <h2>Highscores!</h2>
+                    <ol>
+                        <li>initil - 20s</li>
+                        <li>initil - 20s</li>
+                        <li>initil - 20s</li>
+                        <li>initil - 20s</li>
+                        <li>initil - 20s</li>
+                        <li>initil - 20s</li>
+                    </ol>
+
+                </section>
+
+
+
+
 
             </main>
 
