--- a/index.html
+++ b/index.html
@@ -9,58 +9,63 @@
 
 <body>
     <!--main outter div-->
-    <div class="outer-container">
+    <div class="outer-container" id="outer-container">
         <!--top bar-->
-        <div class="top-bar">
+        <div class="top-bar" id="top-bar">
             <button>View Highscores</button>
             <p>Timer: 00:00</p>
         </div>
 
         <!--inner div-->
-        <div class="inner-container">
+        <div class="inner-container" id="inner-container">
 
             <!--quiz intro-->
-            <header class="quiz-intro">
+            <header class="quiz-intro" id="quiz-intro">
                 <h1>Quiz Time!</h1>
                 <p>Lets Go!</p>
-                <button>Start Quiz? Yeah sure!</button>
+                <a href="/">Start Quiz</a>
             </header>
             <!--main content-->
             <!--inisible-->
             <main>
-                <!--all questions will generate here-->
-                <section class="questions">
+                <!--all questions will generate in js-->
+                <section class="questions" id="questions">
                     <h2>Questions</h2>
-                    <ul>
-                        <li><button>Answer 1</button></li>
+                    <ul class="choice-text">
+                        <!--<li><button>Answer 1</button></li>
                         <li><button>Answer 2</button></li>
                         <li><button>Answer 3</button></li>
-                        <li><button>Answer 4</button></li>
+                        <li><button>Answer 4</button></li>-->
                     </ul>
                 </section>
                 <!--end questions-->
-                <section class="quiz-done-screen">
+                <section class="quiz-done-screen" id="quiz-done-screen">
                     <h2>Quiz Finish</h2>
                     <p>Your Score!: 00</p>
                     <div>
                         <label for="">Enter Initials</label>
                         <input type="text">
-                        <button>Submit</button>
+                        <a href="/">Submit</a>
                     </div>
                 </section>
 
 
                 <!--High score screen-->
-                <section class="highscores-screen">
+                <section class="highscores-screen" id="highscores-screen">
                     <h2>Highscores!</h2>
                     <ol>
+                        <!-- this will generate in js-->
+                        <!--<li>initil - 20s</li>
                         <li>initil - 20s</li>
                         <li>initil - 20s</li>
                         <li>initil - 20s</li>
                         <li>initil - 20s</li>
-                        <li>initil - 20s</li>
-                        <li>initil - 20s</li>
+                        <li>initil - 20s</li>-->
                     </ol>
+
+                    <a href="/">Go back</a>
+                    <a href="/">Clear Scores</a>
+
 
                 </section>
 
@@ -72,6 +77,7 @@
 
         </div>
     </div>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
