been trying and retrying java script

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="outer-container" id="outer-container">
         <!--top bar-->
         <div class="top-bar" id="top-bar">
-            <button>View Highscores</button>
+            <a href="highscores.html" class="btn">High Scores!</a>
             <p>Timer: 00:00</p>
         </div>
 
@@ -23,22 +23,22 @@
             <header class="quiz-intro" id="quiz-intro">
                 <h1>Quiz Time!</h1>
                 <p>Lets Go!</p>
-                <a href="/">Start Quiz</a>
+                <a href="game.html" class="btn">Start Quiz</a>
             </header>
             <!--main content-->
             <!--inisible-->
             <main>
-                <!--all questions will generate in js-->
+                <!--all questions will generate in js
                 <section class="questions" id="questions">
                     <h2>Questions</h2>
-                    <ul class="choice-text">
-                        <!--<li><button>Answer 1</button></li>
+                    <ul class="choice-text" id="choice-text">
+                        <li><button>Answer 1</button></li>
                         <li><button>Answer 2</button></li>
                         <li><button>Answer 3</button></li>
-                        <li><button>Answer 4</button></li>-->
+                        <li><button>Answer 4</button></li>
                     </ul>
                 </section>
-                <!--end questions-->
+                end questions
                 <section class="quiz-done-screen" id="quiz-done-screen">
                     <h2>Quiz Finish</h2>
                     <p>Your Score!: 00</p>
@@ -50,24 +50,24 @@
                 </section>
 
 
-                <!--High score screen-->
+                High score screen
                 <section class="highscores-screen" id="highscores-screen">
                     <h2>Highscores!</h2>
                     <ol>
-                        <!-- this will generate in js-->
+                         this will generate in js-->
                         <!--<li>initil - 20s</li>
                         <li>initil - 20s</li>
                         <li>initil - 20s</li>
                         <li>initil - 20s</li>
                         <li>initil - 20s</li>
-                        <li>initil - 20s</li>-->
+                        <li>initil - 20s</li>
                     </ol>
 
                     <a href="/">Go back</a>
                     <a href="/">Clear Scores</a>
 
 
-                </section>
+                </section> -->
 
 
 
