--- a/game.html
+++ b/game.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/game.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PLAY</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Code Quiz</title>
+    <link rel="stylesheet" href="assets/game.css">
 </head>
-
 <body>
-    <div class="inner-container" id="inner-container">
-        <!--all questions will generate in js-->
-        <section class="questions" id="questions">
-            <h2>Questions</h2>
-            <p id="question"></p>
-            <ol class="choices"></ol>
-        </section>
-    </div>
-    <!--end questions-->
-    <section class="quiz-done-screen" id="quiz-done-screen">
-        <h2>Quiz Finish</h2>
-        <p>Your Score!: 00</p>
-        <div>
-            <label for="">Enter Initials</label>
-            <input type="text">
-            <a href="index.html">Submit</a>
+    <div class="container">
+        <div id="game" class="justify-center flex-column">
+            <h2 id="question">question</h2>
+            <div class="choice-container">
+                <p class="choice-prefix">A</p>
+                <p class="choice-text" data-num="1">choice1</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">B</p>
+                <p class="choice-text"data-num="2">choice2</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">C</p>
+                <p class="choice-text" data-num="3">choice3</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">D</p>
+                <p class="choice-text" data-num="4">choice4</p>
+            </div>
         </div>
-    </section>
+    </div>
     <script src="./assets/script.js"></script>
 </body>
+</html>
