--- a/index.html
+++ b/index.html
@@ -1,83 +1,21 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>code quiz</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Code Quiz</title>
 </head>
-
 <body>
-    <!--main outter div-->
-    <div class="outer-container" id="outer-container">
-        <!--top bar-->
-        <div class="top-bar" id="top-bar">
-            <a href="highscores.html" class="btn">High Scores!</a>
-            <p>Timer: 00:00</p>
-        </div>
+    <div class="container">
+        <div id="welcome" class="flex-center flex-column">
+            <h1>Quiz Time</h1>
+            <a class="btn" href="game.html">Start</a>
+            <a class="btn" href="/highscores.html">High Scores</a>
 
-        <!--inner div-->
-        <div class="inner-container" id="inner-container">
-
-            <!--quiz intro-->
-            <header class="quiz-intro" id="quiz-intro">
-                <h1>Quiz Time!</h1>
-                <p>Lets Go!</p>
-                <a href="game.html" class="btn">Start Quiz</a>
-            </header>
-            <!--main content-->
-            <!--inisible-->
-            <main>
-                <!--all questions will generate in js
-                <section class="questions" id="questions">
-                    <h2>Questions</h2>
-                    <ul class="choice-text" id="choice-text">
-                        <li><button>Answer 1</button></li>
-                        <li><button>Answer 2</button></li>
-                        <li><button>Answer 3</button></li>
-                        <li><button>Answer 4</button></li>
-                    </ul>
-                </section>
-                end questions
-                <section class="quiz-done-screen" id="quiz-done-screen">
-                    <h2>Quiz Finish</h2>
-                    <p>Your Score!: 00</p>
-                    <div>
-                        <label for="">Enter Initials</label>
-                        <input type="text">
-                        <a href="/">Submit</a>
-                    </div>
-                </section>
-
-
-                High score screen
-                <section class="highscores-screen" id="highscores-screen">
-                    <h2>Highscores!</h2>
-                    <ol>
-                         this will generate in js-->
-                        <!--<li>initil - 20s</li>
-                        <li>initil - 20s</li>
-                        <li>initil - 20s</li>
-                        <li>initil - 20s</li>
-                        <li>initil - 20s</li>
-                        <li>initil - 20s</li>
-                    </ol>
-
-                    <a href="/">Go back</a>
-                    <a href="/">Clear Scores</a>
-
-
-                </section> -->
-
-
-
-
-
-            </main>
-
+            
         </div>
     </div>
-    <script src="./assets/script.js"></script>
 </body>
-
 </html>
