--- a/game.html
+++ b/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,28 +9,48 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="assets/game.css">
 </head>
+
 <body>
     <div class="container">
         <div id="game" class="justify-center flex-column">
-            <h2 id="question">question</h2>
-            <div class="choice-container">
-                <p class="choice-prefix">A</p>
-                <p class="choice-text" data-num="1">choice1</p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">B</p>
-                <p class="choice-text"data-num="2">choice2</p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">C</p>
-                <p class="choice-text" data-num="3">choice3</p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">D</p>
-                <p class="choice-text" data-num="4">choice4</p>
+            <div id="hud">
+                <div id="hud-item">
+                    <p class="hud-prefix">
+                        question
+                    </p>
+                    <h1 class="hud-main-text" id="questionCounter">
+                        1/4
+                    </h1>
+                </div>
+                <div id="hud-item">
+                    <p class="hud-prefix">
+                        score
+                    </p>
+                    <h1 class="hud-main-text" id="score">
+                        0
+                    </h1>
+                </div>
+                </div>
+                <h2 id="question">question</h2>
+                <div class="choice-container">
+                    <p class="choice-prefix">A</p>
+                    <p class="choice-text" data-num="1">choice1</p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">B</p>
+                    <p class="choice-text" data-num="2">choice2</p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">C</p>
+                    <p class="choice-text" data-num="3">choice3</p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">D</p>
+                    <p class="choice-text" data-num="4">choice4</p>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="./assets/script.js"></script>
+        <script src="./assets/script.js"></script>
 </body>
+
 </html>
