added a countdown of 30 seconds

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>code quiz</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div class="container">
         <div id="welcome" class="flex-center flex-column">
             <h1>Quiz Time</h1>
             <a class="btn" href="game.html">Start</a>
-            <a class="btn" href="/highscores.html">High Scores</a>
+            <a class="btn" href="highscores.html">High Scores</a>
 
             
         </div>
