--- a/game.html
+++ b/game.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLAY</title>
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="assets/game.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/game.css">
 </head>
 
 <body>
+    <progress value="0" max="30" id="progressBar"></progress>
     <div class="container">
+        
         <div id="game" class="justify-center flex-column">
             <div id="hud">
                 <div id="hud-item">
@@ -19,7 +21,7 @@
                         question
                     </p>
                     <h1 class="hud-main-text" id="questionCounter">
-                        1/4
+                        
                     </h1>
                 </div>
                 <div id="hud-item">
@@ -50,7 +52,8 @@
                 </div>
             </div>
         </div>
-        <script src="./assets/script.js"></script>
+        <a href="./highscores.html"></a>
+        <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
