--- a/highscores.html
+++ b/highscores.html
@@ -16,8 +16,8 @@
             <form>
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="submit" class="btn" id="saveButton" onclick="saveHighScores(event)">Save</button>
-                
             </form>
+            <ol class="highscores" id="highscores"></ol>
             <a class="btn" href="./index.html">Go Home</a>
         </div>
     </div>
