local storage fixed

--- a/game.html
+++ b/game.html
@@ -60,6 +60,7 @@
         </div>
         <a href="./highscores.html"></a>
         <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/highscores.js"></script>
 </body>
 
 </html>
